@@ -18,6 +18,7 @@ define( function( require ) {
   var inherit = require( 'PHET_CORE/inherit' );
   var Line = require( 'SCENERY/nodes/Line' );
   var LogarithmicGraph = require( 'PH_SCALE/common/view/graph/LogarithmicGraph' );
+  var MultiLineText = require( 'SCENERY_PHET/MultiLineText' );
   var Node = require( 'SCENERY/nodes/Node' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
@@ -49,14 +50,14 @@ define( function( require ) {
     var thisNode = this;
     Node.call( thisNode );
 
+    var textOptions = { font: new PhetFont( { size: 18, weight: 'bold' } ) };
+
     // units switch
     var graphUnitsProperty = new Property( options.units );
     var graphUnitsSwitch = new ABSwitch( graphUnitsProperty,
-      GraphUnits.MOLES_PER_LITER, concentrationString + '\n(' + molesPerLiterString + ')',
-      GraphUnits.MOLES, quantityString + '\n(' + molesString + ')', {
-      font: new PhetFont( { size: 18, weight: 'bold' } ),
-      size: new Dimension2( 50, 25 )
-      } );
+      GraphUnits.MOLES_PER_LITER, new MultiLineText( concentrationString + '\n(' + molesPerLiterString + ')', textOptions ),
+      GraphUnits.MOLES, new MultiLineText( quantityString + '\n(' + molesString + ')', textOptions ),
+      { size: new Dimension2( 50, 25 ) } );
 
     //TODO use sun.PushButton
     // zoom buttons for the linear graph
@@ -70,10 +71,10 @@ define( function( require ) {
 
     // switch between 'Logarithmic' and 'Linear'
     var graphScaleProperty = new Property( options.graphScale );
-    var graphScaleSwitch = new ABSwitch( graphScaleProperty, GraphScale.LOGARITHMIC, logarithmicString, GraphScale.LINEAR, linearString, {
-      font: new PhetFont( 18 ),
-      size: new Dimension2( 50, 25 )
-    } );
+    var graphScaleSwitch = new ABSwitch( graphScaleProperty,
+      GraphScale.LOGARITHMIC, new MultiLineText( logarithmicString, textOptions ),
+      GraphScale.LINEAR, new MultiLineText( linearString, textOptions ),
+      { size: new Dimension2( 50, 25 ) } );
 
     // logarithmic graph, switchable between 'concentration' and 'quantity'
     var scaleHeight = 475;
